Fix margin alignment in style.css

--- a/style.css
+++ b/style.css
@@ -5,3 +5,7 @@
 #phone-number-label {
     margin-left: -16px;
 }
+
+#consent-label {
+    margin-left: -20px;
+}
